Fix quotes
Squashed commit of the following:

* add(releasenote)

* fix(css): change quotation symbols

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -51,7 +51,7 @@ blockquote {
     margin: 1.5em 10px;
     padding: 0.5em 20px;
     padding-top: 1.5em;
-    quotes: "\201C""\201D""\2018""\2019";
+    quotes: "\201C""\201C";
 }
 
 blockquote:before {
